k8s/elk_stack/namespace.yaml
# ELK Stack Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: elk-stack
  labels:
    name: elk-stack
